<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.settings.SettingsFragment"
    >


    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="@dimen/text_size_h1"
        android:padding="@dimen/card_margin"
        android:textColor="@color/yellowAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/settingsDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_profile"
        android:textSize="@dimen/text_size_h1"
        android:padding="@dimen/card_margin"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsTitle"
        />

    <EditText
        android:id="@+id/profileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_padding"
        android:inputType="textPersonName"
        android:hint="@string/name_hint"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/settingsDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/profileWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_padding"

        android:inputType="numberDecimal"
        android:hint="@string/weight_hint"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/profileName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/profileGoalWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_padding"
        android:inputType="numberDecimal"
        android:hint="@string/goal_weight_hint"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/profileWeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/profileAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_padding"
        android:inputType="number"
        android:hint="@string/age_hint"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/profileGoalWeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/settingsSaveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_padding"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/profileAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />







</androidx.constraintlayout.widget.ConstraintLayout>